@@ -1,5 +1,7 @@
 \documentclass[10pt]{article}
 %\VignetteIndexEntry{RcppGSL}
+%\VignetteKeywords{R,GSL,Rcpp,data transfer}
+%\VignettePackage{RcppGSL}
 
 \usepackage{url,color}
 \usepackage[authoryear,round,longnamesfirst]{natbib}
@@ -18,6 +20,9 @@
 
 \newcommand{\proglang}[1]{\textsf{#1}}
 \newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
+
+\RequirePackage{ae,mathpple}    % ae as a default font pkg works with Sweave
+\RequirePackage[T1]{fontenc}
 
 <<echo=FALSE,print=FALSE>>=
 library( "RcppGSL" )
